--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -106,7 +106,7 @@
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
                             <div class="about-one__thumb__img">
-                                <img src="assets/images/resources/about-1-3.jpg" 
+                                <img src="assets/images/asociacion/APT Imagen 1.png" 
                                 width="700"
                                 height="400"
                                 alt="ogency">
@@ -128,7 +128,7 @@
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
                             <div class="about-one__thumb__img">
-                                <img src="assets/images/resources/about-1-4.jpg" 
+                                <img src="assets/images/asociacion/APT Imagen 2.png" 
                                 width="800"
                                 height="400"
                                 alt="ogency">
@@ -187,7 +187,7 @@
                                 <img src="assets/images/resources/why-choose-1-4.png" alt="ogency">
                             </div>
                             <div class="why-choose__image__author wow fadeInRight animated" data-wow-delay="300ms">
-                                <img src="assets/images/resources/why-choose-1-2.png" alt="ogency">
+                                <img src="assets/images/asociacion/APT Imagen 3.png" alt="ogency">
                             </div>
                         </div>
                     </div>
