--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Ogency HTML Template For Creative Agency" />
+    <meta name="description" content="Phimister’s Business School forma emprendedores con una metodología práctica en emprendimiento, liderazgo e innovación. Conéctate con empresas y acelera tu éxito" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
