--- a/index.html
+++ b/index.html
@@ -820,10 +820,10 @@
                         />
                     </a><!-- /.footer-logo -->
                     <div class="main-footer__social">
-                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
-                        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/phimistersbschool/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/phimistersbschool/"><i class="fab fa-linkedin"></i></a>
+                        <!-- <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a> -->
+                        <!-- <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a> -->
                     </div><!-- /.footer-social -->
                 </div><!-- footer-top -->
                 <div class="row">
@@ -880,10 +880,10 @@
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
-                <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/phimistersbschool/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/phimistersbschool/"><i class="fab fa-linkedin"></i></a>
+                <!-- <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a> -->
+                <!-- <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a> -->
             </div><!-- /.mobile-nav__social -->
         </div>
         <!-- /.mobile-nav__content -->
