cambios asoc. talento

--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -96,7 +96,7 @@
                             <!-- about content start-->
                             <div class="section-title">
                                 <h5 class="section-title__tagline section-title__tagline--has-dots"></h5>
-                                <h2 class="section-title__title">Sobre el programa</h2>
+                                <h2 class="section-title__title">El desafío de impulsar al talento joven</h2>
                             </div><!-- section-title -->
                             <p class="about-one__content__text-one">La tasa de desempleo juvenil en España alcanza el 30%, el doble que la media europea. A esto se suma una preocupante tasa de emprendimiento juvenil, que apenas llega al 6%, muy por debajo de países como Reino Unido o Países Bajos. Además, en el último año, Cataluña ha perdido más de 120.000 personas debido a la fuga de talento.</p></br>
                         </div><!-- about content end-->
