--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@
                         />
                     </a><!-- /.footer-logo -->
                     <div class="main-footer__social">
-                        <a href="https://www.instagram.com/phimistersbschool/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/company/phimistersbschool/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/phimistersbschool/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/phimistersbschool/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <!-- <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a> -->
                         <!-- <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a> -->
                     </div><!-- /.footer-social -->
@@ -943,8 +943,8 @@
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
-                <a href="https://www.instagram.com/phimistersbschool/"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/phimistersbschool/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/phimistersbschool/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/phimistersbschool/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <!-- <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a> -->
                 <!-- <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a> -->
             </div><!-- /.mobile-nav__social -->
