--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@
                                 <h3 class="team-one__item__title">
                                     <a href="https://linkedin.com/">Montse</br>Puyalto</a>
                                 </h3><!-- /.team-name -->
-                                <span class="team-one__item__designation">Sales
-                                    Coordinator</span><!-- /.team-designation -->
+                                <span class="team-one__item__designation">Academic Advisor -
+                                    Sales Coordinator</span><!-- /.team-designation -->
                                 <div class="team-one__item__social-wrapper">
                                     <a class="team-one__item__links" href="https://linkedin.com/"><span
                                             class="fab fa-linkedin"></span></a><!-- /.social-more -->
