cambio laia orden montse

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                             <!-- <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li> -->
                             <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el Talento</a></li>
                             <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
-                            <li class="scrollToLink"><a href="https://aulavirtual.phimistersbschool.com/" class="campus-button">Ingreso campus alumno</a></li>
+                            <li class="scrollToLink"><a href="https://aulavirtual.phimistersbschool.com/"
+                                    class="campus-button">Ingreso campus alumno</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
                 </div><!-- /.container -->
@@ -306,8 +307,8 @@
         <!-- Sliding Text Start-->
         <section class="slider-text-one">
             <div class="slider-text-one__animate-text">
+                <span>NEVER ENOUGH.<span>
                 <span>ALWAYS READY.<span>
-                        <span>NEVER ENOUGH.<span>
             </div>
         </section>
         <!-- Sliding Text Start-->
@@ -530,6 +531,25 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
+                                <img src="assets/images/home/equipo/Montse.png" alt="ogency">
+                            </div><!-- /.team-image -->
+                            <div class="team-one__item__content">
+                                <h3 class="team-one__item__title">
+                                    <a href="https://linkedin.com/">Montse</br>Puyalto</a>
+                                </h3><!-- /.team-name -->
+                                <span class="team-one__item__designation">Sales Coordinator -
+                                    Academic Advisor</span><!-- /.team-designation -->
+                                <div class="team-one__item__social-wrapper">
+                                    <a class="team-one__item__links" href="https://linkedin.com/"><span
+                                            class="fab fa-linkedin"></span></a><!-- /.social-more -->
+
+                                </div>
+                            </div><!-- /.team-content -->
+                        </div><!-- /.team-one -->
+                    </div>
+                    <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
+                        <div class="team-one__item">
+                            <div class="team-one__item__image">
                                 <img src="assets/images/team/team-1-7.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
@@ -595,25 +615,6 @@
                                 </h3><!-- /.team-name -->
                                 <span class="team-one__item__designation">Coach y asesora
                                     financiera</span><!-- /.team-designation -->
-                                <div class="team-one__item__social-wrapper">
-                                    <a class="team-one__item__links" href="https://linkedin.com/"><span
-                                            class="fab fa-linkedin"></span></a><!-- /.social-more -->
-
-                                </div>
-                            </div><!-- /.team-content -->
-                        </div><!-- /.team-one -->
-                    </div>
-                    <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
-                        <div class="team-one__item">
-                            <div class="team-one__item__image">
-                                <img src="assets/images/home/equipo/Montse.png" alt="ogency">
-                            </div><!-- /.team-image -->
-                            <div class="team-one__item__content">
-                                <h3 class="team-one__item__title">
-                                    <a href="https://linkedin.com/">Montse</br>Puyalto</a>
-                                </h3><!-- /.team-name -->
-                                <span class="team-one__item__designation">Academic Advisor -
-                                    Sales Coordinator</span><!-- /.team-designation -->
                                 <div class="team-one__item__social-wrapper">
                                     <a class="team-one__item__links" href="https://linkedin.com/"><span
                                             class="fab fa-linkedin"></span></a><!-- /.social-more -->
